FTP/TLS and SFTP Browser for Mac OS X
http://cyberduck.ch/

Last modified: $Date$
Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

3.0 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
- [Feature] Support for file renaming and copying (Amazon S3, refer to http://doc.s3.amazonaws.com/proposals/copy.html)

3.0b3 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
- [Feature] Activity Window [#1250]

3.0b2 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
- [Localize] Latvian Localization
- [Feature] Quick Look files in browser [#1580]
- [Feature] Set corresponding Web URL in bookmark. Open in browser toolbar button [#1098]
- [Bugfix] APPE command broken (FTP) [#1915]

3.0b1 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
- [Feature] Amazon Simple Storage Service (S3) protocol support (http://aws.amazon.com/s3) [#1725]
- [Feature] WebDAV protocol support [#464]
- [Feature] Search bookmarks [#916]
- [Feature] Bookmark editor inside browser window instead of drawer
- [Feature] Read trust settings for certificates from Keychain
- [Feature] Different editors for different file types [#146]
- [Feature] Skip option not available in transfer prompt [#1159]
- [Bugfix] Type ahead works for child items in outline view [#471]

2.8.5 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8.5]
- [Feature] Added ForgEdit to the list of supported editors (http://forgedit.com) [#1779]
- [Feature] PRET (PRE Transfer) command support for distributed FTP (http://www.drftpd.org) [#684]
- [Bugfix] Downloads no longer keep modified date [#1756]
- [Bugfix] Leap year bug wen parsing date without year [#1813]

2.8.4 [http://trac.cyberduck.ch/query?status=closed&milestone=2.8.4]
- [Bugfix] Crash when dismissing sheet attached to window [#1616]
- [Bugfix] Resolving Bonjour names blocks user interface [#1657]