@@ -20,15 +20,26 @@ p.note {
 	<div>
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0">
-		3.0b3</a></strong> <em></em> (Build $Revision$)<br />
+		3.0</a></strong> <em></em> (Build $Revision$)<br />
 
 		<ul>
-<li>[Feature] Activity Window [<a href="http://trac.cyberduck.ch/ticket/">#1250</a>]</li>
+<li>[Feature] Support for file renaming and copying (Amazon S3)</li>
+<li>[Bugfix] Transfers larger than 2GB fail (SFTP) [<a href="http://trac.cyberduck.ch/ticket/1235">#1235</a>]</li>
 		</ul>
 
 		<p class="note">
 <strong>Note</strong>: You are required to run <strong>OS X 10.4</strong> (Tiger) or later to run Cyberduck 3.
 		</p>
+	</div>
+
+	<div>
+		<strong><a href=
+		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0">
+		3.0b3</a></strong> <em></em> (Build 3901)<br />
+
+		<ul>
+<li>[Feature] Activity Window [<a href="http://trac.cyberduck.ch/ticket/">#1250</a>]</li>
+		</ul>
 	</div>
 
 	<div>
