@@ -5,7 +5,8 @@ Last modified: $Date$
 Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 
 
 3.0 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
-- [Feature] Support for file renaming and copying (Amazon S3, refer to http://doc.s3.amazonaws.com/proposals/copy.html)
+- [Feature] Support for file renaming and copying (Amazon S3)
+- [Bugfix] Transfers larger than 2GB fail (SFTP) [#1235]
 
 3.0b3 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0]
 - [Feature] Activity Window [#1250]
